@@ -26,20 +26,20 @@ return
     {"pipe", {x = -9.5, y = -2.5}, {dead = 0.4}},
     {"pipe", {x = -8.5, y = -2.5}, {dead = 0.4}},
     {"medium-electric-pole", {x = -7.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = -4.5, y = -3.5}, {dead = 0.4}},
-    {"pipe", {x = -3.5, y = -3.5}, {dead = 0.4}},
-    {"pipe", {x = 0.5, y = -3.5}, {dead = 0.4}},
+    {"pipe", {x = -4.5, y = -3.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = -3.5, y = -3.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 0.5, y = -3.5}, {dead = 0.4, fluids = {water = 100}}},
     {"heat-pipe", {x = 3.5, y = -2.5}, {dead = 0.7}},
     {"heat-pipe", {x = 5.5, y = -2.5}, {dead = 0.7}},
     {"heat-pipe", {x = 4.5, y = -2.5}, {dead = 0.7}},
-    {"pipe", {x = 7.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 7.5, y = -3.5}, {dead = 0.4}},
-    {"pipe", {x = 9.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 8.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 11.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 10.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 13.5, y = -2.5}, {dead = 0.4}},
-    {"pipe", {x = 12.5, y = -2.5}, {dead = 0.4}},
+    {"pipe", {x = 7.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 7.5, y = -3.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 9.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 8.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 11.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 10.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 13.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
+    {"pipe", {x = 12.5, y = -2.5}, {dead = 0.4, fluids = {water = 100}}},
     {"active-provider-chest-remnants", {x = -9.5, y = -0.5}, {}},
     {"requester-chest-remnants", {x = -9.5, y = -1.5}, {}},
     {"pipe", {x = -8.5, y = -1.5}, {dead = 0.4}},
