@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: ????
+  Minor Features:
+    - Added support for fluid spawning.
   Bugfixes:
     - Fixed inserting items with 0 count.
 ---------------------------------------------------------------------------------------------------
